nextcloud/.test-fixtures/hostdir/nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-headless
  labels:
    app: nextcloud
  annotations:
    package-operator.run/phase: deploy
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: nextcloud
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  labels:
    app: nextcloud
  annotations:
    package-operator.run/phase: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  serviceName: nextcloud-headless
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: "registry.package-operator.run/static-image"
        volumeMounts:
        - mountPath: /var/www/html
          name: webroot
        - mountPath: /var/www/html/data
          name: data
        ports:
        - name: http
          containerPort: 80
      - command:
        - /cron.sh
        image: "registry.package-operator.run/static-image"
        name: cron
        volumeMounts:
        - mountPath: /var/www/html
          name: webroot
        - mountPath: /var/www/html/data
          name: data
      - name: redis
        args:
        - redis-server
        - --save ''
        - --appendonly no
        - --maxmemory 483183820800
        - --maxmemory-policy allkeys-lfu
        image: "registry.package-operator.run/static-image"
      volumes:
      - hostPath:
          path: /mnt/k8s/apps/nextcloud-data
          type: Directory
        name: data
      - hostPath:
          path: /mnt/k8s/apps/nextcloud-webroot
          type: Directory
        name: webroot
